Improve write throughput performance